syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.pact.provider";
option java_outer_classname = "Provider";
option objc_class_prefix = "HLW";

package br.com.zup.pact.provider;

service ProviderService {
  rpc send (ProviderRequest) returns (ProviderReply) {}
}

message ProviderRequest {
  string name = 1;
}

message ProviderReply {
  string message = 1;
}